@@ -16,7 +16,7 @@
 -->
 
 <project name="get_ivy" default="init-ivy">
-<property name="ivy.install.version" value="2.0.0-rc2"/>
+<property name="ivy.install.version" value="2.1.0"/>
 <condition property="ivy.home" value="${env.IVY_HOME}">
   <isset property="env.IVY_HOME" />
 </condition>
