@@ -23,7 +23,7 @@ commons-collections.version=3.2.1
 commons-lang.version=2.4
 commons-logging.version=1.0.4
 commons-logging-api.version=1.0.4
-ivy.version=2.0.0-rc2
+ivy.version=2.1.0
 log4j.version=1.2.15
 
 
